Routes update
- replace basic update with addStudent update
